--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-<H1><pre>                   <u>Resume</u></pre></H1>
+<H1><pre>                   <u>Welcome, to the great side</u></pre></H1>
 <hr>
 <br><br>
     </header>
