--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     </header>
     <br>
     <main>
+        <p> 
+            <img src="img.jpg" height="100" width="100" alt="my picture">
+        </p>
         <big><b><i>Name: </i></b></big><small><b>Abdul Rehman Soomro</b></small>
 <br>
 <br>
