--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
                 font-style: italic;
                 text-align: center; 
             }
-            .black {
+            h1{
                 color: cadetblue;
-                font-size: 30px;
-                width: 20px;
                 font: italic;
                 text-align: center;
+                text-transform: capitalize;
             }
-            h2 {
-                color: brown;
+            .black {
+                color:cornflowerblue;
                 font-size: 30px;
                 width: 20px;
                 font: italic;
@@ -57,7 +56,7 @@
                 font-size: medium;
             }
         </style>
-<pre class="blue">             Welcome, to the greater side</pre>
+<h1>Welcome, to the greater side</h1>       
 <br><br>
     </header>
     <br>
