--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
                 font-size: 20px;
                 width: 200px;
                 text-align:center;
-                
-
+                background-position: 20px;
+                background-color: darkblue; 
+                border-top-right-radius: 20px;
+                border-bottom-left-radius: 20px;
+                opacity: 80%; border-style:groove;
             }
             span { 
                 color:aquamarine;
@@ -37,6 +40,12 @@
                 font: italic;
                 text-align: center;
                 text-transform: capitalize;
+                background-color: darkblue; 
+                border-radius: 20px; 
+                border-style: groove;
+                
+                border-top: 20px;
+                opacity: 75%;
             }
             .black {
                 color:cornflowerblue;
