--- a/index.html
+++ b/index.html
@@ -4,67 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <style>
-            .blue {
-                color: grey;
-                font-size: 50px;
-                width: 50px;
-                text-align: center;
-
-            }
-            div {
-                color:darkcyan;
-                font: bolder;
-                font-size: 20px;
-                width: 200px;
-                text-align:center;
-                background-position: 20px;
-                background-color: darkblue; 
-                border-top-right-radius: 20px;
-                border-bottom-left-radius: 20px;
-                opacity: 80%; border-style:groove;
-            }
-            span { 
-                color:aquamarine;
-                font-size: 25px;
-                font: bold;
-                width: 100px;
-                font-style: italic;
-                text-align: center; 
-            }
-            h1{
-                color: cadetblue;
-                font: italic;
-                text-align: center;
-                text-transform: capitalize;
-                background-color: darkblue; 
-                border-radius: 20px; 
-                border-style: groove;
-                
-                border-top: 20px;
-                opacity: 75%;
-            }
-            .black {
-                color:cornflowerblue;
-                font-size: 30px;
-                width: 20px;
-                font: italic;
-                font: bolder;
-            }
-            img {
-                width: 200px;
-                height: 200px;
-                border-radius: 90px;
-            }
-            a {
-                color:cornflowerblue;
-                width: 20px;
-                font-size: medium;
-            }
-        </style>
 <h1>Welcome, to the greater side</h1>       
 <br><br>
     </header>
@@ -74,14 +17,14 @@
 <img src="img.jpg" alt="my picture">
         
         <!-- <span>Name:</span> -->
-        <div>Myself, Abdul Rehman Soomro</div>
+        <div id="intro">Myself, Abdul Rehman Soomro</div>
 <br>
 <br>
-<h2 class="black">Email:</h2> </i></b></big><small><b>20-IN-22@students.duet.edu.pk</b></small>
+<h2 id="heading">Email:</h2> </i></b></big><small><b>20-IN-22@students.duet.edu.pk</b></small>
     </main>
     <br>
     <section>
-        <h2 class="black"><i>Education:</i></h2>
+        <h2 id="heading"><i>Education:</i></h2>
         <big><b><i>University:</i></b></big>
         <a href="https://duet.edu.pk/">DUET, KHI</a>
         <br>
@@ -91,9 +34,9 @@
         <big><b><i>School:</i></b></big>
         <a href="https://www.facebook.com/kamalgrammer/">KGS,KHI</a>
         <br>
-        <h2 class="black">Experience:</h2>
+        <h2 id="heading">Experience:</h2>
         <p>Internship at <b>Alkaram</b> in <b>Quality Assurace Department</b></p>
-        <h2 class="black">Achievements:</h2>
+        <h2 id="heading">Achievements:</h2>
         <p><b>First position</b> in the Internship at Alkaram Home Texttiles for <b>improving Quality</b></p>
     </section>
     <br>
