--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div id="intro">Myself, Abdul Rehman Soomro</div>
 <br>
 <br>
-<h2 id="heading">Email:</h2> </i></b></big><small><b>20-IN-22@students.duet.edu.pk</b></small>
+<h2 id="heading">Contact me @</h2>
+<div id="email">20-IN-22@students.duet.edu.pk</div>
+<div id="phone">03112487797</div>
     </main>
     <br>
     <section>
